# Philosophers

./: CMakeLists.txt  Makefile
inc/: exceptions.h  philo_data.h  philosophers.h  utils.h
inc_bonus/: exceptions.h  philo_data.h  philosophers.h  utils.h
lib/libft42/inc/: stringft_int.h
lib/libft42/src/ft_gb/: gb_push.c
lib/libft42/src/ft_main/: split.c
src/: exceptions.c  main.c  philo_data.c  philo_setup.c  philo_threads.c  utils.c
src_bonus/: exceptions.c  main.c  philo_data.c  philo_setup.c  philo_threads.c  sem_utils.c  utils.c
